WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59917
REGRESSIONS (
r71934
): In standalone media documents, (double-)clicking the media element doesn’t play/pause
https://bugs.webkit.org/show_bug.cgi?id=59917
Summary
REGRESSIONS (r71934): In standalone media documents, (double-)clicking the me...
Abhishek Arya
Reported
2011-05-01 23:00:20 PDT
Branched off from
https://bugs.webkit.org/show_bug.cgi?id=59886
Description From
mitz@webkit.org
2011-05-01 13:28:50 PST (-) [reply] <
rdar://problem/9319469
> In a standalone media document, such as the URL, clicking the video element should pause it and double-clicking it should resume playback. Clicking and double-clicking in the background should have no effect.
r71934
broke the clicking/double-clicking the video behavior.
Attachments
Patch
(2.10 KB, patch)
2011-05-02 13:11 PDT
,
Dimitri Glazkov (Google)
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2011-05-02 11:02:16 PDT
Trying to load the url produces this in Safari for me: Safari can’t open “
http://movies.apple.com/movies/us/apple/ipoditunes/2007/touch/ads/apple_ipodtouch_touch_r640-9cie.mov
” because Mac OS X doesn’t recognize Internet addresses starting with “http:”. What am I doing wrong?
mitz
Comment 2
2011-05-02 11:09:51 PDT
Is this on Mac OS X? Which version of Mac OS X are you using, which version of Safari? Do you have any Safari extensions installed?
Dimitri Glazkov (Google)
Comment 3
2011-05-02 11:14:15 PDT
(In reply to
comment #2
)
> Is this on Mac OS X? Which version of Mac OS X are you using, which version of Safari? Do you have any Safari extensions installed?
10.6.7, Safari 5.0.4. Same issue on
r71897
and ToT. I don't know how to install Safari extensions, so I am assuming I've none.
Dimitri Glazkov (Google)
Comment 4
2011-05-02 11:18:38 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > Is this on Mac OS X? Which version of Mac OS X are you using, which version of Safari? Do you have any Safari extensions installed? > > 10.6.7, Safari 5.0.4. Same issue on
r71897
and ToT. I don't know how to install Safari extensions, so I am assuming I've none.
I just verified. No extensions.
Dimitri Glazkov (Google)
Comment 5
2011-05-02 11:26:08 PDT
Found the problem. I disabled plugins.
Dimitri Glazkov (Google)
Comment 6
2011-05-02 13:11:10 PDT
Created
attachment 91962
[details]
Patch
Dimitri Glazkov (Google)
Comment 7
2011-05-02 13:19:20 PDT
Committed
r85510
: <
http://trac.webkit.org/changeset/85510
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug