2011-05-02  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Eric Carlson.

        REGRESSIONS (r71934): In standalone media documents, (double-)clicking the media element doesn’t play/pause
        https://bugs.webkit.org/show_bug.cgi?id=59917

        Since default event handlers are not retargeted, we should always attempt ancestor
        traversal to find out whether the event.

        * html/MediaDocument.cpp:
        (WebCore::ancestorVideoElement): Added ancestor-traversing helper.
        (WebCore::MediaDocument::defaultEventHandler): Changed to use ancestorVideoElement.

Canonical link: https://commits.webkit.org/75213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85510 268f45cc-cd09-0410-ab3c-d52691b4dbfc